Archive2/86/cff873d34a92f1/output
main.cpp: In function 'int main()':
main.cpp:5:34: error: invalid conversion from 'void*' to 'int*' [-fpermissive]
     int* ptr = malloc(sizeof(int));
                                  ^
